broken build fixed - Integer.valueOf(int ) is not available in JDK 1.4.x